crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__morunderscore.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Courtney",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Tracy",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Rose",
            "role": "Investigator",
            "speaker_code": "INV"
          },
          {
            "name": "Tom",
            "role": "Father",
            "speaker_code": "FAT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "08-SEP-1992",
        "participant": "CHI",
        "type": "birth"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "26-MAR-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "Did a Topsy and Tim jigsaw and then magnetic fishing. Ethan,\n\tthe baby, was asleep on the settee to begin with. Tom\n\tcame in briefly on his way to work. Hadn't the microphone\n\tswitched on to begin with so this starts a few minutes into\n\tthe visit.",
        "type": "situation"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Ethans",
                  "pos": "propn"
                }
              },
              {
                "main": {
                  "lemma": "fast",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "S1"
                  ],
                  "lemma": "asleep",
                  "pos": "adj"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "ADVMOD"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "Ethan's",
                  "type": "text"
                }
              ],
              "raw_text": "Ethan's",
              "span": {
                "end": 607,
                "start": 600
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "fast",
                  "type": "text"
                }
              ],
              "raw_text": "fast",
              "span": {
                "end": 612,
                "start": 608
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "asleep",
                  "type": "text"
                }
              ],
              "raw_text": "asleep",
              "span": {
                "end": 619,
                "start": 613
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S2"
                  ],
                  "lemma": "do",
                  "pos": "aux"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S2"
                  ],
                  "lemma": "you",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "S"
                  ],
                  "lemma": "like",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Ger",
                    "S"
                  ],
                  "lemma": "have",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur",
                    "Acc"
                  ],
                  "lemma": "lace",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "or",
                  "pos": "cconj"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur"
                  ],
                  "lemma": "buckle",
                  "pos": "noun"
                }
              }
            ],
            "terminator": "?",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "AUX"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "XCOMP"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "OBJ"
              },
              {
                "head": 7,
                "index": 6,
                "relation": "CC"
              },
              {
                "head": 5,
                "index": 7,
                "relation": "CONJ"
              },
              {
                "head": 3,
                "index": 8,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "span": {
                "end": 720,
                "start": 718
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 724,
                "start": 721
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "like",
                  "type": "text"
                }
              ],
              "raw_text": "like",
              "span": {
                "end": 729,
                "start": 725
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "having",
                  "type": "text"
                }
              ],
              "raw_text": "having",
              "span": {
                "end": 736,
                "start": 730
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "laces",
                  "type": "text"
                }
              ],
              "raw_text": "laces",
              "span": {
                "end": 742,
                "start": 737
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "or",
                  "type": "text"
                }
              ],
              "raw_text": "or",
              "span": {
                "end": 745,
                "start": 743
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "buckles",
                  "type": "text"
                }
              ],
              "raw_text": "buckles",
              "span": {
                "end": 753,
                "start": 746
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": "08-SEP-1992",
      "code": "CHI",
      "id": {
        "age": "3;06.18",
        "corpus": "belfast",
        "language": "eng",
        "role": "Target_Child",
        "ses": "UC",
        "speaker": "CHI"
      },
      "name": "Courtney",
      "role": "Target_Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Father",
        "speaker": "FAT"
      },
      "name": "Tom",
      "role": "Father"
    },
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": "Rose",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "belfast",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Tracy",
      "role": "Mother"
    }
  }
}
