crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__morzero.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "0word is ignored for mor",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "im",
                  "pos": "intj"
                }
              },
              {
                "main": {
                  "features": [
                    "Ind",
                    "Art"
                  ],
                  "lemma": "a",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "play",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur"
                  ],
                  "lemma": "toy",
                  "pos": "noun"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 4,
                "index": 1,
                "relation": "DISCOURSE"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "DET"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "COMPOUND"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I'm",
                  "type": "text"
                }
              ],
              "raw_text": "I'm",
              "span": {
                "end": 192,
                "start": 189
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "span": {
                "end": 194,
                "start": 193
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "play",
                  "type": "text"
                }
              ],
              "raw_text": "play",
              "span": {
                "end": 199,
                "start": 195
              },
              "type": "word"
            },
            {
              "category": "omission",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "0the",
              "span": {
                "end": 204,
                "start": 200
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "toys",
                  "type": "text"
                }
              ],
              "raw_text": "toys",
              "span": {
                "end": 209,
                "start": 205
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
