crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mov-no-space.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "mov-no-space",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 2042652,
            "start_ms": 2041689
          },
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "ryoote",
                        "type": "text"
                      }
                    ],
                    "raw_text": "ryoote",
                    "span": {
                      "end": 195,
                      "start": 189
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "agete",
                        "type": "text"
                      }
                    ],
                    "raw_text": "agete",
                    "span": {
                      "end": 201,
                      "start": 196
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "singing",
                  "type": "paralinguistic"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "postcodes": [
            {
              "text": "bch"
            },
            {
              "text": "foo"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
